--- a/slides/04-dimension-ca-slides.qmd
+++ b/slides/04-dimension-ca-slides.qmd
@@ -336,7 +336,7 @@ library(FactoMineR)
 library(factoextra)
 library(tidyverse)
 
-df <- read_csv('../include/data/pca/canada.csv')
+df <- read_csv('../include/data/ca/canada.csv')
 knitr::kable(df)
 
 ```
