--- a/contents/04-dimension.qmd
+++ b/contents/04-dimension.qmd
@@ -11,7 +11,7 @@ format:
 
   - [Analyse en composantes principales](../slides/04-dimension-pca-slides.qmd) - [annoté](../slides/04-dimension-pca-slides-annotated.qmd)
 
-  - [Analyse factorielle des correspondances](../slides/04-dimension-ca-slides.qmd)
+  - [Analyse factorielle des correspondances](../slides/04-dimension-ca-slides.qmd) - [annoté](../slides/04-dimension-ca-slides-annotated.qmd)
 
   - [Analyse des correspondances multiples](../slides/04-dimension-mca-slides.qmd)
 
