--- a/contents/07-further.qmd
+++ b/contents/07-further.qmd
@@ -8,6 +8,15 @@ format:
       - \usepackage{mathtools}
 ---
 
+
+* Slides: 
+
+  - [\thique](../slides/07-ethics-slides.qmd) 
+
+* TD: [link](../td/07-ethics-td.qmd)
+
+* TP: [link](../tp/07-ethics-tp.qmd)
+
 L'analyse de données est aujourd'hui utilisé dans de nombreux domaines : santé, éducation, politique publique, etc. Les données jouent même un rôle central dans la plupart des domaines. Les analyses permettent de prendre des décisions mieux informées et parfois automatisées. Dans certains domaines, ces décisions sont inconséquentes, mais pour d'autres domaines, cela soulève des questions éthiques majeures. Par exemple, est-ce que mes données représentent fidélement ma population ? quelles décisions sont prises à partir de ces analyses ? quelles sont les conséquences pour les individus concernés ?
 
 Les données ne sont pas neutres, elles sont le reflet d'un contexte social, institutionnel et technique. Ainsi, les modèles qui en sont issus peuvent renforcer les inégalités, reproduire des biais historiques, ou éventuellement porter atteinte à la vie privée des individus. Il est donc essentiel, lorsque l'on fait une analyse de données, d'avoir une certaine vigilance éthique, en réflechissant aux impacts sociaux, aux limites méthodologiques et aux responsabilités associées à ses choix.
