--- a/slides/05-supervised-tree-slides.qmd
+++ b/slides/05-supervised-tree-slides.qmd
@@ -1,6 +1,6 @@
 --- 
-title: "Dimension"
-subtitle: "Data"
+title: "Supervisée"
+subtitle: "Arbres"
 author: "Steven Golovkine"
 lang: fr
 date: today
