--- a/slides/06-unsupervised-gaussian-slides.qmd
+++ b/slides/06-unsupervised-gaussian-slides.qmd
@@ -1,6 +1,6 @@
 --- 
-title: "Dimension"
-subtitle: "Data"
+title: "Non-supervisée"
+subtitle: "Mélange de gaussiennes"
 author: "Steven Golovkine"
 lang: fr
 date: today
